# tapas-tables

./: README.org  pyproject.toml  pyrightconfig.json
table_qa/dash/: table.py
table_qa/data/: dataset_load.py  pinecone_upload.py
table_qa/model/: sentence_embedder.py  table_reader.py
